# ExaThought

./: ExaThought.py  README.md  Tuner.py  eval.py  loader.py  run.sh  search.py
src/: CMakeLists.txt  bitboards.cpp  bitboards.h  board.cpp  board.h  consts.h  eval.cpp  eval.h  main.cpp  move.cpp  move.h  movegen.cpp  movegen.h  pgn.cpp  pgn.h  predicates.cpp  predicates.h
src/ExaThought/: ExaThought.java  PNSearch.java  UCI.java  eval.java  search.java
